<resources>
    <string name="app_name">Control de Procesos</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="label_go_to_register">Crear una cuenta ? Regístrate</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="label_name">Nombre</string>
    <string name="label_email_new">Correo Electrónico</string>
    <string name="capture_image">Cámara</string>
    <string name="btnconfirmremolienda">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_muestra_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_muestra_exit_message">Si abandonas el registro, los datos  que habias ingresado se perderán</string>
    <string name="dialog_create_muestra_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_muestra_negative_btn">Continuar registro</string>
    <string name="validate_name_description">Coloque primer nombre y primer apellido</string>
    <string name="validate_remolienda_date">Es necesario definir una fecha</string>
    <string name="validate_remolienda_time">Es necesario ingresar la hora</string>
    <string name="DeniedPermit">Permiso Denegado</string>
    <string name="error_loading_ids">Ocurrio un problema al cargar los Ids</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y una contraseña</string>
    <string name="complete_register_now">Por favor completar todos los campos</string>
    <string name="error_password_register">Las contraseñas no coinciden</string>
    <string name="error_response_server">Se otuvo una respuesta inesperada del servidor</string>
    <string name="error_register_validation">Ocurrió un error en el registro</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="Edit_phone">Celular</string>
    <string name="Edit_cargo">Cargo</string>
    <string name="Save_profile">Guardar Datos</string>
    <string name="edit_password">Contraseña</string>
    <string name="profile_success_message">Los cambios sean guardado correctamente</string>
    <string name="error_profile_name">El nombre ingresado es demasiado corto</string>

</resources>