<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ui.ProfileActivity"
android:id="@+id/createAppointmentLinearLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:animateLayoutChanges="true"
android:background="@drawable/bg_blue"
android:gravity="center"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_horizontal"
    android:paddingTop="12dp"
    android:text="@string/edit_profile"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@color/White" />


<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStep1"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp"

    tools:context=".ui.CreateAppointmentActivity">


    <ProgressBar
        tools:visibility="gone"
        android:id="@+id/ProgressbarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        tools:visibility="visible"
        android:id="@+id/linearLayoutProfile"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:hint="@string/label_name"
                android:layout_width="match_parent"
                android:inputType="textPersonName"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:hint="@string/Edit_phone"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etArea"
                android:hint="@string/Edit_cargo"
                android:layout_width="match_parent"
                android:inputType="textPostalAddress"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btnConfirmProfile"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_cloud_check"
            android:text="@string/Save_profile" />

    </LinearLayout>

</androidx.cardview.widget.CardView>


</LinearLayout>