<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grdnt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/message" />
                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email"
                        android:textColorHint="@color/BlackGloss"
                        android:layout_marginLeft="15dp"
                        android:background="@color/backgroundWhite"
                        android:letterSpacing="0.1"
                        android:textSize="16dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/BlackGloss"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cian_azul"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/pswrd"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:textColorHint="@color/BlackGloss"
                        android:layout_marginLeft="15dp"
                        android:background="@color/backgroundWhite"
                        android:inputType="textPassword"

                        android:letterSpacing="0.1"
                        android:textSize="16dp"
                        android:textColor="@color/BlackGloss"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cian_azul"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BlackGloss"
                android:text="@string/btn_login"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:layout_marginBottom="50dp"
                android:letterSpacing="0.2"/>
            <TextView
                android:id="@+id/GotoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_go_to_register"
                android:textColor="@color/BlackGloss"
                android:letterSpacing="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="400dp">

            <ImageView
                android:layout_width="247dp"
                android:layout_height="200dp"
                android:src="@drawable/logo_size1" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>